force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__ApprovalRule__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovalRule__c</fullName>
        <description>Rule to which this Condition applies.</description>
        <inlineHelpText>Rule to which this Condition applies.</inlineHelpText>
        <label>Approval Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Approval Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>