force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__EnableSmartApproval__c.field-meta.xml
<CustomField>
        <fullName>sbaa__EnableSmartApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Smart Approvals for this approval Condition. If approval snapshot does not change, condition will not be fired.</description>
        <inlineHelpText>Enables Smart Approvals for this approval Condition. If approval snapshot does not change, condition will not be fired.</inlineHelpText>
        <label>Enable Smart Approval</label>
        <type>Checkbox</type>
    </CustomField>