force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__FilterType__c.field-meta.xml
<CustomField>
        <fullName>sbaa__FilterType__c</fullName>
        <description>Type of filter used during Tested Field/Variable evaluation</description>
        <inlineHelpText>Type of filter used during Tested Field/Variable evaluation</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>