force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__FilterValue__c.field-meta.xml
<CustomField>
        <fullName>sbaa__FilterValue__c</fullName>
        <description>Static value to evaluate the Tested Field/Variable against</description>
        <inlineHelpText>Static value to evaluate the Tested Field/Variable against</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>