force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__FilterVariable__c.field-meta.xml
<CustomField>
        <fullName>sbaa__FilterVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Approval Variable to evaluate the Tested Field/Variable against</description>
        <inlineHelpText>Approval Variable to evaluate the Tested Field/Variable against</inlineHelpText>
        <label>Filter Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipLabel>Approval Condition (Filter Variable)</relationshipLabel>
        <relationshipName>EntryCriteria</relationshipName>
        <type>Lookup</type>
    </CustomField>