force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__Index__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Index__c</fullName>
        <description>Assign an unique number to this Condition to reference it in the Approval Rule&apos;s Advanced Condition.</description>
        <inlineHelpText>Assign an unique number to this Condition to reference it in the Approval Rule&apos;s Advanced Condition.</inlineHelpText>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>