force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__TestedField__c.field-meta.xml
<CustomField>
        <fullName>sbaa__TestedField__c</fullName>
        <description>Field tested when evaluating the Condition</description>
        <inlineHelpText>Field tested when evaluating the Condition</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Probability</fullName>
                </value>
                <value>
                    <fullName>ACV__c</fullName>
                </value>
                <value>
                    <fullName>ACV_Equivalent_Discount_excl_RA__c</fullName>
                </value>
                <value>
                    <fullName>ACV_Equivalent_List_Price_excl_RA__c</fullName>
                </value>
                <value>
                    <fullName>ACV_Equivalent_Quote_Price_excl_RA__c</fullName>
                </value>
                <value>
                    <fullName>Additional_Increase__c</fullName>
                </value>
                <value>
                    <fullName>Any_changes_to_reduce_current_CPI_term__c</fullName>
                </value>
                <value>
                    <fullName>Apply_Standard_CPI__c</fullName>
                </value>
                <value>
                    <fullName>Approval_Budget_Rate_ACV__c</fullName>
                </value>
                <value>
                    <fullName>Approval_Hierarchy__c</fullName>
                </value>
                <value>
                    <fullName>Auto_Renewal__c</fullName>
                </value>
                <value>
                    <fullName>Budget_Rate_ACV__c</fullName>
                </value>
                <value>
                    <fullName>Business_Area__c</fullName>
                </value>
                <value>
                    <fullName>Cloud_SUB__c</fullName>
                </value>
                <value>
                    <fullName>Coterminous__c</fullName>
                </value>
                <value>
                    <fullName>CPI__c</fullName>
                </value>
                <value>
                    <fullName>CPI_Index_Type__c</fullName>
                </value>
                <value>
                    <fullName>Deal_Type__c</fullName>
                </value>
                <value>
                    <fullName>Deviation_from_ETF__c</fullName>
                </value>
                <value>
                    <fullName>Future_Discount__c</fullName>
                </value>
                <value>
                    <fullName>Future_Discount_Give_Away_Sign_Bonus__c</fullName>
                </value>
                <value>
                    <fullName>Future_Discount_Give_Away_Sign_Bonus_2y__c</fullName>
                </value>
                <value>
                    <fullName>Gross_Margin_for_Project__c</fullName>
                </value>
                <value>
                    <fullName>Hardware__c</fullName>
                </value>
                <value>
                    <fullName>Increase_of_Total_Annualized_Commit_Fee__c</fullName>
                </value>
                <value>
                    <fullName>License_Payment_Terms__c</fullName>
                </value>
                <value>
                    <fullName>Maximum_Rate__c</fullName>
                </value>
                <value>
                    <fullName>Minimum_Rate__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>