force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__TestedVariable__c.field-meta.xml
<CustomField>
        <fullName>sbaa__TestedVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Approval Variable tested when evaluating the Condition</description>
        <inlineHelpText>Approval Variable tested when evaluating the Condition</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipLabel>Approval Condition (Tested Variable)</relationshipLabel>
        <relationshipName>EntryCriteriaTested</relationshipName>
        <type>Lookup</type>
    </CustomField>