force-app/main/default/objects/sbaa__ApprovalCondition__c/validationRules/sbaa__Filter_Type_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>sbaa__Filter_Type_Validation</fullName>
        <active>true</active>
        <description>Ensures correct configuration of Filter Type, Filter Value, Filter Variable and Filter Field.</description>
        <errorConditionFormula>(ISPICKVAL(sbaa__FilterType__c, &apos;Value&apos;) &amp;&amp; (NOT(ISPICKVAL(sbaa__FilterField__c, &apos;&apos;)) || NOT(ISBLANK(sbaa__FilterVariable__c))))

||

(ISPICKVAL(sbaa__FilterType__c, &apos;Variable&apos;) &amp;&amp; (ISBLANK(sbaa__FilterVariable__c) || NOT(ISPICKVAL(sbaa__FilterField__c, &apos;&apos;)) || NOT(ISBLANK(sbaa__FilterValue__c))))

||

(ISPICKVAL(sbaa__FilterType__c, &apos;Field&apos;) &amp;&amp; (ISPICKVAL(sbaa__FilterField__c, &apos;&apos;) || NOT(ISBLANK(sbaa__FilterValue__c)) || NOT(ISBLANK(sbaa__FilterVariable__c))))</errorConditionFormula>
        <errorMessage>You may specify only one type of filter and it must match Filter Type.</errorMessage>
    </ValidationRule>