force-app/main/default/objects/sbaa__ApprovalCondition__c/validationRules/sbaa__Tested_Target_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>sbaa__Tested_Target_Validation</fullName>
        <active>true</active>
        <description>A value must be provided for either Tested Field or Tested Variable.</description>
        <errorConditionFormula>(ISBLANK(sbaa__TestedVariable__c) &amp;&amp; ISPICKVAL(sbaa__TestedField__c, &apos;&apos;)) ||
(NOT(ISBLANK(sbaa__TestedVariable__c)) &amp;&amp; NOT(ISPICKVAL(sbaa__TestedField__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>You must provide a value for either Tested Field or Tested Variable.</errorMessage>
    </ValidationRule>